4.0.0:
- New: completely rewritten and reorganized settings app
- New: Material You wallpaper
- New: Android 12 support (not fully tested yet)
- New: translation via Transifex (less than 80 strings to translate, link in About!)
- Improved: theme selection and internal wallpaper management
- Fixed: incorrect zoom on lockscreen
- Fixed: non-gesture navigation bar color in dialogs on Android 11 and higher

3.5.1:
- New: option to set tilt sensor refresh rate (useful if tilt caused lags with zoom animations)
- Fixed: skipped frames in zoom animation when unlocking immediately
- Fixed: SET button not disabled if settings app is opened from wallpaper preview

3.5.0:
- New: option for hiding app icon in launcher
- Fixed: annoying shape offset in shape groups when zoomed out
- Fixed: settings reset option

3.4.1:
- Improved: acceleration sensor listener will now only be registered if the option is turned on
- Improved: information and warnings
- Fixed: wallpaper frame jump after switching the tilt sensor option on or off
- Fixed: potential wallpaper crashes

3.4.0:
- New: optional parallax effect when tilting the device
- New: Brazilian Portuguese translation (big thanks to Alexandre!)
- Improved: descriptions of options and information
- Fixed: potential wallpaper and app crashes

3.3.0:
- New: option to force white text with shadow on bright backgrounds
- Improved: haptic feedback in settings only enabled if system vibrations are turned on
- Improved: confirmation of settings reset

3.2.0:
- New: additional color variants
- New: option to reset all settings (reinstalling Doodle would not clean them as they are stored at a special place)
- Improved: wallpaper thumbnail
- Improved: appearance and behavior of dialogs and system bars in settings (still some bugs)
- Improved: internal resource management
- Fixed: incorrect TouchWiz warning on Android 11
- Fixed: clipped text in changelog
- Fixed: GPU icon in settings