@@ -90,10 +90,13 @@
   <string name="size_description">Scale &amp; zoom effect</string>
   <string name="size_scale">Scale</string>
   <string name="size_scale_description">Useful for big screens and densities</string>
-  <string name="size_zoom">Zoom effect intensity</string>
+  <string name="size_category_zoom">Zoom effect</string>
+  <string name="size_zoom">Zoom intensity</string>
   <string name="size_zoom_description">When increased, the camera zooms out more</string>
   <string name="size_zoom_launcher">Zoom out when opening quick settings or app drawer</string>
   <string name="size_zoom_unlock">Zoom out on lockscreen</string>
+  <string name="size_zoom_duration">Unlock zoom duration</string>
+  <string name="size_zoom_duration_description">Decrease for faster animation</string>
 
   <!-- OTHER -->
 
